sidenav on mobile version fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,6 +5,10 @@ body {
   font-family: 'Raleway', sans-serif;
 }
 
+#sidenav-overlay {
+  position: inherit;
+}
+
 .font-cursive {
   font-family: 'Stalemate', cursive;
 }
